# transformersjs-bench

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md
.claude/: settings.local.json
bench/: .env.example  README.md  index.html  package-lock.json  package.json  start.sh  tsconfig.json
bench-node/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
bench-node/src/: index.ts
bench-web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
bench-web/src/: cli.ts  main.ts
bench/docs/: benchmark-id-format.md  hf-dataset-integration.md
bench/src/: index.ts
bench/src/core/: args.ts  benchmark-id.ts  logger.ts  metrics.ts  sysinfo.ts  task-inputs.ts  types.ts
bench/src/node/: benchmark.ts  cache.ts  index.ts
bench/src/server/: hf-dataset.ts  index.ts  queue.ts  storage.ts
bench/src/web/: benchmark.ts  cache.ts  cli.ts  envinfo.ts  main.ts
client/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
client/src/: hf-api.ts  index.ts
leaderboard/: .env.example  .gitignore  README.md  main.py  pyproject.toml
leaderboard/src/leaderboard/: __init__.py  app.py  data_loader.py  formatters.py
