[project]
name = "leaderboard"
version = "0.1.0"
description = "Transformers.js Benchmark Leaderboard - Display benchmark results from HuggingFace Dataset"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.49.1",
    "huggingface-hub>=0.35.3",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
]

[project.scripts]
leaderboard = "leaderboard.app:create_leaderboard_ui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leaderboard"]

[tool.uv]
package = true
